--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,12 +10,11 @@
     <div class="container">
         <header>
             <h1>Каталог рецептов</h1>
-            <p>API сервер для управления рецептами</p>
         </header>
 
         <main>
             <section class="api-info">
-                <h2>Доступные эндпоинты API:</h2>
+                <h2>Инструкция работы с API</h2>
                 
                 <div class="endpoint">
                     <h3>GET /api/recipes</h3>
